add feature update user name
